<resources>
    <string name="app_name">Kata</string>
    <string name="style">Style</string>
    <string name="bigbang_intro_tip">When the app is running in the background, you can copy any paragraph or even a web link containing Japanese at any place. This app will automatically analyze its structure and show it to you.</string>
    <string name="bigbang_hold_tip">Now, try to hold and copy ↓</string>
    <string name="initializing_database">Initializing database…</string>
    <string name="example_sentence">日本語は、主に日本国内や日本人同士の間で使われている言語である。日本は法令によって公用語を規定していないが、法令その他の公用文は全て日本語で記述され、各種法令において日本語を用いることが定められ、学校教育においては「国語」として教えられるなど、事実上、唯一の公用語となっている。</string>
    <string name="copy">Copy</string>
    <string name="nothing_happened">Nothing happened?</string>
    <string name="nothing_happened_detail">Try to\n\n- Go phone settings\n- Apps\n- Kata\n- Draw over other apps\n- ENABLE IT!</string>
    <string name="cannot_open_overlay_permission_settings">Can\'t open \"Draw over other apps\" settings, please enable it in your phone\'s settings manually</string>
    <string name="cancelled">Cancelled</string>
    <string name="enhanced_mode">Enhanced mode</string>
    <string name="enhanced_mode_summary">Prevent killed by system</string>
    <string name="disable_for_one_minute">Disable for one minute</string>
    <string name="disable_for_one_minute_tip">Tip: Long click icon to disable web page parser temporarily</string>
    <string name="deleted_sth">Deleted %1$s</string>
    <string name="redo">Redo</string>
    <string name="set_alias">Set alias</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="click_to_youtube_tutorial_title">Don\'t know where to start?</string>
    <string name="click_to_youtube_tutorial_summary">Click to view our tutorial video</string>
    <string name="no_alias">NO ALIAS</string>

    <string name="lyric">Lyric</string>
    <string name="inbox">Inbox</string>
    <string name="word_book">Vocabulary Builder</string>
    <string name="nhk_news_easy">NHK News Easy</string>
    <string name="nhk_news">NHK News</string>

    <string name="about">About</string>
    <string name="description">Kata (片) - Not just a NHK news reader\n</string>
    <string name="homepage">HomePage</string>
    <string name="review">Review</string>
    <string name="search">Search</string>
    <string name="no_result">No result</string>
    <string name="developer">Developer</string>
    <string name="dacer">Dacer</string>
    <string name="my_other_projects">My other projects</string>
    <string name="pomotodo">Pomotodo</string>
    <string name="pomotodo_desc">Wrote the code part</string>
    <string name="simple_pomodoro">Simple Pomodoro</string>
    <string name="simple_pomodoro_desc">Rewriting…</string>

    <string name="settings">Settings</string>
    <string name="enable">Enable</string>
    <string name="default_search_engine">Default search engine</string>
    <string name="bigbang_style">Style</string>
    <string name="copied">Copied</string>
    <string name="text_size">Text size</string>
    <string name="furigana_text_size">Furigana text size</string>
    <string name="line_spacing">Line spacing</string>
    <string name="word_spacing">Word spacing</string>
    <string name="not_found_error">Sorry, couldn\'t find anything matching %1$s</string>
    <string name="permission_error_overlay">\"Draw over other apps\" need to be permitted</string>
    <string name="show_float_dialog_when_copy_few_words">Show float dialog when copy few words</string>
    <string name="translate_to">Dictionary language</string>
    <string name="how_it_works">How it works</string>
    <string name="listen_to_clipboard">Listen to clipboard</string>
    <string name="cache">Cache</string>
    <string name="inbox_max">Inbox Max</string>
    <string name="news_caching_wifi_only">News Caching WiFi Only</string>
    <string name="show_news_pic_wifi_only">Show Pictures WiFi Only</string>
    <string name="clear_cache">Clear cache</string>
    <string name="no_internet">No Internet</string>
    <string name="web_404_error">Page not found</string>
    <string name="background_color">Background color</string>
    <string name="optimization_steps">Battery optimization -> All apps -> %1$s -> Don\'t optimize</string>
    <string name="analyze_url_in_clipboard">Analyze url in clipboard</string>
    <string name="text_analysis">Text Analysis</string>
    <string name="text_analysis_engine">Text Analysis Engine</string>
    <string name="text_analysis_engine_basic">Basic</string>
    <string name="text_analysis_engine_Online">Online (Experimental)</string>
    <string name="text_analysis_engine_Online_alert">When this function is enabled, all text will be automatically uploaded to the server for analysis. If you have concerns about privacy, please do not enable this.</string>
    <string name="text_analysis_engine_Online_alert_confirm">CONFIRM</string>

    <string name="tts_error_title">Text-to-speech not work</string>
    <string name="tts_error_content">Try to:\n\nSettings - Accessibility - Text-to-speech output - Select Google TTS Engine and install Japanese voice data</string>

    <string name="fetching_content_from_web_page">Fetching content from web page…</string>
    <string name="web_page_parser">Web page parser</string>
    <string name="web_page_parser_mercury">Mercury</string>
    <string name="web_page_parser_url2io">URL2io</string>
    <string name="web_page_parser_not_use">Do not use</string>

    <string name="syncing">Syncing…</string>
    <string name="caching_articles">Caching articles…</string>

    <string name="drag_and_drop_here_to_stop">Drag and drop here to stop</string>
    <string name="voice_file_is_loading">Voice file is still loading…</string>

    <string name="open_in_browser">Open in browser</string>
    <string name="parse_content">Parse content</string>

    <string name="delete">Delete</string>
    <string name="mastered">Mastered</string>
    <string name="flashcards">Flashcards</string>
    <string name="learning">Learning</string>
    <string name="see_definition">See Definition</string>
    <string name="see_usage">See Usage</string>
    <string name="skip">Skip</string>
    <string name="mark_sth_as_learning">Mark %1$s as learning</string>

    <string name="tips_vocabulary_builder_title">Vocabulary Builder</string>
    <string name="tips_vocabulary_builder_summary">Every word you clicked is added to a list that you can access using Vocabulary Builder.\n\nTo turn it off, Go Settings→Vocabulary Builder.</string>

    <string name="all_mastered_congratulations">Congratulations!\nAll cards are mastered!</string>

    <string name="ankidroid_not_found_title">Can not export to AnkiDroid</string>
    <string name="ankidroid_not_found_summary">You need to install AnkiDroid before use this function</string>
    <string name="ankidroid_not_found_install_btn">install</string>
    <string name="ankidroid_export_title">Export to AnkiDroid</string>
    <string name="ankidroid_export_summary">Export all the Learning words to AnkiDroid</string>
    <string name="ankidroid_export_export_btn">Export</string>
    <string name="ankidroid_export_move_to_mastered_after_export">Move words to mastered after export</string>
    <string name="ankidroid_export_finished">Anki cards export finished</string>

    <string name="translated_by_google">Translated by Google</string>
    <string name="searching_translation">Searching translation…</string>

    <string name="compose_shortcut_analyse_clipboard_content">Analyse Clipboard Content</string>
    <string name="compose_disabled_message">Shortcut Disabled</string>
    <string name="loading_clipboard_content">Loading clipboard content</string>
    <string name="clipboard_content_not_found">Clipboard content not found</string>

    <string name="android_q_clipboard_alert_title">For Android 10 User</string>
    <string name="android_q_clipboard_alert_content">Due to Google’s limitations, starting with Android 10, we will not be able to get clipboard data from the background. You can use other methods to analyze Japanese text:</string>
    <string name="android_q_method_text_selection_action">Text Selection Action</string>
    <string name="android_q_method_share">Share</string>
    <string name="android_q_method_shortcut">Shortcut</string>
    <string name="use_nhk_mirror_site">Use NHK mirror site</string>
    <string name="use_nhk_mirror_site_summary">Select it if you can\'t access NHK website</string>

    <string name="moji_not_found">You need to install Moji辞書 before use this function</string>
    <string name="share_to_kata">Share to kata</string>
</resources>
