<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/myToolbar"
        layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/myToolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/listenClipboardLayout"
                style="@style/SettingsItem">

                <TextView
                    style="@style/SettingsItemLeft.Title"
                    android:text="@string/listen_to_clipboard"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/listenClipboardSwitch"
                    style="@style/SettingsItemRight"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/textAnalysis"
                style="@style/SettingsItem.MoreTopDivider">

                <TextView
                    style="@style/SettingsItemLeft.Title"
                    android:text="@string/text_analysis"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/bigbangStyle"
                style="@style/SettingsItem">

                <TextView
                    style="@style/SettingsItemLeft.Title"
                    android:text="@string/bigbang_style"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/cacheLayout"
                style="@style/SettingsItem">

                <TextView
                    style="@style/SettingsItemLeft.Title"
                    android:text="@string/cache"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tutorialVideoLayout"
                style="@style/SettingsItem.MoreTopDivider">

                <TextView
                    style="@style/SettingsItemLeft.Title"
                    android:text="@string/click_to_youtube_tutorial_summary"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
