<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tutorialLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <androidx.cardview.widget.CardView
            android:id="@+id/intro_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/newsTitle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@color/windowBackground"
                android:text="@string/bigbang_intro_tip"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/bigbangTipTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bigbang_hold_tip"
            android:layout_below="@+id/intro_view"
            android:layout_marginTop="20dp"
            android:textColor="#C0C0C0"/>

        <TextView
            android:id="@+id/clipTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bigbangTipTv"
            android:layout_marginTop="15dp"
            android:text="@string/example_sentence"/>

        <im.dacer.kata.view.PopupView
            android:id="@+id/popupView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/clipTv"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/nothingHappenedView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        card_view:cardCornerRadius="4dp"
        android:layout_below="@+id/tutorialLayout"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:padding="12dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nothing_happened"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="#fff"
                android:text="@string/nothing_happened_detail" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/goToYoutubeView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        card_view:cardCornerRadius="4dp"
        android:layout_below="@+id/tutorialLayout"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F44336"
            android:padding="12dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_youtube_tutorial_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#fff"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="#fff"
                android:text="@string/click_to_youtube_tutorial_summary" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/permissionErrorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="#F44336"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fff"
            android:text="@string/permission_error_overlay"/>
    </LinearLayout>
</RelativeLayout>
