<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/myToolbar"
        layout="@layout/include_toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/myToolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <im.dacer.kata.core.view.KataLayout
                android:id="@+id/kataLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#fff">

            </im.dacer.kata.core.view.KataLayout>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_size"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/textSizeSeekBar"
            style="@style/DiscreteSeekBar.TopMargin"
            app:dsb_max="24"
            app:dsb_min="10"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/furigana_text_size"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/furiganaTextSizeSeekBar"
            style="@style/DiscreteSeekBar.TopMargin"
            app:dsb_max="24"
            app:dsb_min="10"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/line_spacing"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/lineSpaceSeekBar"
            style="@style/DiscreteSeekBar.TopMargin"
            app:dsb_max="30"
            app:dsb_min="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/word_spacing"/>

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/itemSpace"
            style="@style/DiscreteSeekBar.TopMargin"
            app:dsb_max="20"
            app:dsb_min="0"/>

    </LinearLayout>

</RelativeLayout>