<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/myToolbar"
        layout="@layout/include_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/myToolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/cacheMax"
                style="@style/SettingsItem.WrapHeight">

                <TextView
                    android:id="@+id/cacheMaxTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/inbox_max"/>

                <TextView
                    android:id="@+id/cacheMaxNumTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    tools:text="2"/>

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/cacheSeekBar"
                    style="@style/DiscreteSeekBar.TopMargin"
                    android:layout_below="@+id/cacheMaxTitle"
                    app:dsb_max="9999"
                    app:dsb_min="0"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/newsCachingWifiOnlyLayout"
                style="@style/SettingsItem">

                <TextView
                    style="@style/SettingsItemLeft.Title"
                    android:text="@string/news_caching_wifi_only"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/newsCachingWifiOnly"
                    style="@style/SettingsItemRight"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/showPicWifiOnlyLayout"
                style="@style/SettingsItem">

                <TextView
                    style="@style/SettingsItemLeft.Title"
                    android:text="@string/show_news_pic_wifi_only"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/showPicWifiOnly"
                    style="@style/SettingsItemRight"/>
            </RelativeLayout>
            <!--<RelativeLayout-->
            <!--android:id="@+id/clearCacheLayout"-->
            <!--style="@style/SettingsItem">-->

            <!--<TextView-->
            <!--style="@style/SettingsItemLeft.Title"-->
            <!--android:text="@string/clear_cache"/>-->

            <!--</RelativeLayout>-->

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
